// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x"]
}

datasource db {
  provider          = "sqlserver"
  url               = env("DATABASE_URL")
  shadowDatabaseUrl = env("SHADOW_DATABASE_URL")
  relationMode      = "prisma"
}

generator pothos {
  provider    = "prisma-pothos-types"
  prismaUtils = true
}

generator dbml {
  provider = "prisma-dbml-generator"
}

generator pothosCrud {
  provider            = "prisma-generator-pothos-codegen"
  generatorConfigPath = "./pothos.config.js"
}

model User {
  id            String         @id @default(uuid())
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  name          String?
  phoneNumber   String         @unique @default(uuid())
  accessCode    String         @unique
  posts         Post[]
  participation Participation?
}

model Post {
  id           String     @id @default(uuid())
  createdAt    DateTime   @default(now())
  image        Bytes
  reading      Float?
  postStatus   PostStatus @relation(fields: [postStatusId], references: [id])
  postStatusId String
  postedBy     User       @relation(fields: [postedById], references: [id])
  postedById   String

  @@index([postStatusId])
  @@index([postedById])
}

model PostStatus {
  id        String   @id
  createdAt DateTime @default(now())
  Post      Post[]
}

model Participation {
  id             String   @id @default(uuid())
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  totalIncentive Float
  user           User     @relation(fields: [userId], references: [id])
  userId         String   @unique

  @@index([userId])
}

model IncentiveTable {
  id        String @id @default(uuid())
  index     Int
  incentive Float
}
