//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String
  phoneNumber String [unique, not null]
  accessCode String [unique, not null]
  posts Post [not null]
  participation Participation
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  image Bytes [not null]
  reading Float
  postStatus PostStatus [not null]
  postStatusId String [not null]
  postedBy User [not null]
  postedById String [not null]
}

Table PostStatus {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  Post Post [not null]
}

Table Participation {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  totalIncentive Float [not null]
  user User [not null]
  userId String [unique, not null]
}

Table IncentiveTable {
  id String [pk]
  index Int [not null]
  incentive Float [not null]
}

Ref: Post.postStatusId > PostStatus.id

Ref: Post.postedById > User.id

Ref: Participation.userId - User.id